--- a/app/views/dojos/show.html.erb
+++ b/app/views/dojos/show.html.erb
@@ -1,19 +1,76 @@
 <div class="container">
-	<div class="row">
-		<div class="col s12">
-			<h1><%= @dojo.branch%></h1>
-		</div>
-	</div>
+    <div class="row">
+        <div class="col s12">
+            <h1 class="branch"><%= @dojo.branch%></h1> <a href="/dojos/<%= @dojo.id%>/edit" class="btn btn-small edit-dojo-btn">Edit</a>
+        </div>
+    </div>
 
-	<div class="row">
-		<div class="col s12">
-			<p><b>City:</b> <%= @dojo.city%> <b>State:</b> <%= @dojo.state%></p>
-		</div>
-	</div>
+    <% if flash[:notice] %>
+    <div class="row">
+        <div style="color: #fff" class="col s12 green darken-3">
+            <p><%=flash[:notice]%></p>
+        </div>
+    </div>
+    <% end %>
+    <!--  -->
+    <% if flash[:alert] %>
+    <div class="row">
+        <div style="color: #fff" class="col s12 red darken-3">
+            <% flash[:alert].each do |alert| %>
+            <p><%=alert%></p>
+            <%end%>
+        </div>
+    </div>
+    <% end %>
 
-	<div class="row">
-		<div class="col s12">
-			<a href="/dojos" class="btn">Home</a> | <a href="/dojos/<%= @dojo.id%>/edit" class="btn">Edit</a> | <a href="/dojos" class="btn">Back</a>
-		</div>
-	</div>
+    <div class="row">
+        <div class="col s12">
+            <p><b>Address:</b> <%= @dojo.street%></p>
+            <p><b>City:</b> <%= @dojo.city%> <b>State:</b> <%= @dojo.state%></p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col s12">
+            <h3>Student Roster</h3>
+            <table class="responsive-table striped">
+                <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+
+                        <th>Action</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <% @students.each do |student| %>
+                    <tr>
+                        <td><%= student.first_name%></td>
+                        <td><%= student.last_name%></td>
+                        <td><%= student.email%></td>
+                        <td>
+                            <a href="/dojos/<%= @dojo.id%>/students/<%= student.id%>" class="btn btn-small">Show</a> |
+                            <a href="/dojos/<%= @dojo.id%>/students/<%= student.id%>/edit" class="btn btn-small">Edit</a> |
+                            <form action="/dojos/<%= @dojo.id%>/students/<%= student.id%>" method="POST">
+                                <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>" />
+                                <input type="hidden" name="_method" value="delete" />
+                                <button class="btn btn-small waves-effect waves-light red darken-3" type="submit" name="action">Delete</button>
+                            </form>
+                        </td>
+                    </tr>
+                    <% end %>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col s12">
+            <a href="/dojos" class="btn">Home</a>
+            <a href="/dojos/<%= @dojo.id%>/students/new" style="float:right" class="btn">Add Student</a>
+            <!-- | <a href="/dojos/<%= @dojo.id%>/edit" class="btn">Edit</a> | <a href="/dojos" class="btn">Back</a> -->
+        </div>
+    </div>
 </div>
